<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.myapplication.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login"/>
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_loginFragment_to_update_userFragment"
            app:destination="@id/navigation_update_user" />
        <action
            android:id="@+id/action_loginFragment_to_adminPanelFragment"
            app:destination="@id/navigation_admin" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.myapplication.ui.login.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register"/>
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_registerFragment_to_updateUserFragment"
            app:destination="@id/navigation_update_user" />
        <action
            android:id="@+id/action_registerFragment_to_ContactFragment"
            app:destination="@id/navigation_contact" />

    <fragment
        android:id="@+id/navigation_update_user"
        android:name="com.example.myapplication.ui.login.UpdateUserFragment"
        android:label="@string/update"
        tools:layout="@layout/fragment_update_user" />
        <action
            android:id="@+id/action_update_userFragment_to_loginFragment"
            app:destination="@id/navigation_login" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.example.myapplication.ui.login.ContactFragment"
        android:label="Register"
        tools:layout="@layout/fragment_contact"/>
        <action
            android:id="@+id/action_ContactFragment_to_registerFragment"
            app:destination="@id/navigation_register" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
        <action
            android:id="@+id/action_homeFragment_to_locationFragment"
            app:destination="@id/navigation_location" />
        <action
            android:id="@+id/action_homeFragment_to_speakersFragment"
            app:destination="@id/navigation_speakers" />
        <action
            android:id="@+id/action_homeFragment_to_partnersFragment"
            app:destination="@id/navigation_partners" />
        <action
            android:id="@+id/action_homeFragment_to_sessionDetailFragment"
            app:destination="@id/navigation_session_detail" />
        <action
            android:id="@+id/action_homeFragment_to_attendeesFragment"
            app:destination="@id/navigation_attendees" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/navigation_edit_profile" />
        <action
            android:id="@+id/action_profileFragment_to_adminPanelFragment"
            app:destination="@id/navigation_admin" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.example.myapplication.ui.location.LocationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_speakers"
        android:name="com.example.myapplication.ui.speakers.SpeakersFragment"
        android:label="@string/title_speakers"
        tools:layout="@layout/fragment_speakers" />
        <action
            android:id="@+id/action_speakersFragment_to_speakerDetailFragment"
            app:destination="@id/navigation_speakers_detail" />

    <fragment
        android:id="@+id/navigation_speakers_detail"
        android:name="com.example.myapplication.ui.speakers.SpeakerDetailFragment"
        android:label="@string/title_speakers"
        tools:layout="@layout/fragment_speaker_detail" />

    <fragment
        android:id="@+id/navigation_attendees"
        android:name="com.example.myapplication.ui.attendees.AttendeesFragment"
        android:label="@string/title_attendees"
        tools:layout="@layout/fragment_attendees" />
        <action
            android:id="@+id/action_attendeesFragment_to_attendeeDetailFragment"
            app:destination="@id/navigation_attendee_detail" />

    <fragment
        android:id="@+id/navigation_attendee_detail"
        android:name="com.example.myapplication.ui.attendees.AttendeeDetailFragment"
        android:label="@string/title_attendees"
        tools:layout="@layout/fragment_attendee_detail" />

    <fragment
        android:id="@+id/navigation_sessions"
        android:name="com.example.myapplication.ui.schedule.AgendaFragment"
        android:label="@string/title_sessions"
        tools:layout="@layout/fragment_agenda" />
        <action
            android:id="@+id/action_agendaFragment_to_sessionDetailFragment"
            app:destination="@id/navigation_session_detail" />

    <fragment
        android:id="@+id/navigation_session_detail"
        android:name="com.example.myapplication.ui.schedule.SessionDetailFragment"
        android:label="@string/title_sessions"
        tools:layout="@layout/fragment_session_detail" />

    <fragment
        android:id="@+id/navigation_partners"
        android:name="com.example.myapplication.ui.partners.PartnersFragment"
        android:label="@string/title_sponsors"
        tools:layout="@layout/fragment_partners" />

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.example.myapplication.ui.profile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
        <action
            android:id="@+id/action_editProfileFragment_to_loginFragment"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_editProfileFragment_to_verifyCodeFragment"
            app:destination="@id/navigation_verify_code" />

    <fragment
        android:id="@+id/navigation_admin"
        android:name="com.example.myapplication.ui.admin.AdminPanelFragment"
        android:label="@string/admin"
        tools:layout="@layout/fragment_admin_panel" />
        <action
            android:id="@+id/action_adminPanelFragment_to_sessionAdminFragment"
            app:destination="@id/navigation_sessions_admin" />
        <action
            android:id="@+id/action_adminPanelFragment_to_sessionUserFragment"
            app:destination="@id/navigation_users_admin" />
        <action
            android:id="@+id/action_adminPanelFragment_to_homeFragment"
            app:destination="@id/navigation_home" />

    <fragment
        android:id="@+id/navigation_sessions_admin"
        android:name="com.example.myapplication.ui.admin.sessions.SessionAdminFragment"
        android:label="@string/title_sessions"
        tools:layout="@layout/fragment_session_admin" />
        <action
            android:id="@+id/action_sessionAdminFragment_to_newSessionFragment"
            app:destination="@id/navigation_new_session" />
        <action
            android:id="@+id/action_sessionAdminFragment_to_listSessionsFragment"
            app:destination="@id/navigation_list_sessions" />

    <fragment
        android:id="@+id/navigation_users_admin"
        android:name="com.example.myapplication.ui.admin.users.UserAdminFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_user_admin" />

    <fragment
        android:id="@+id/navigation_new_session"
        android:name="com.example.myapplication.ui.admin.sessions.NewSessionFragment"
        android:label="@string/newSession"
        tools:layout="@layout/fragment_user_admin" />

    <fragment
        android:id="@+id/navigation_list_sessions"
        android:name="com.example.myapplication.ui.admin.sessions.ListSessionsFragment"
        android:label="@string/listSessions"
        tools:layout="@layout/fragment_user_admin" />
        <action
            android:id="@+id/action_listSessionsFragment_to_editSessionFragment"
            app:destination="@id/fragment_edit_session" />

    <fragment
        android:id="@+id/fragment_edit_session"
        android:name="com.example.myapplication.ui.admin.sessions.EditSessionFragment"
        android:label="@string/title_sessions"
        tools:layout="@layout/fragment_edit_session">
            <argument
                android:name="sessionId"
                app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.myapplication.ui.profile.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_verify_code"
        android:name="com.example.myapplication.ui.profile.VerifyCodeFragment"
        android:label="Verify code"
        tools:layout="@layout/fragment_verify_code" />
        <action
            android:id="@+id/action_verifyCodeFragment_to_changePasswordFragment"
            app:destination="@id/navigation_change_password" />

    <fragment
        android:id="@+id/navigation_change_password"
        android:name="com.example.myapplication.ui.profile.ChangePasswordFragment"
        android:label="Change password"
        tools:layout="@layout/fragment_change_password" />
        <action
            android:id="@+id/action_ChangePasswordFragment_to_loginFragment"
            app:destination="@id/navigation_login" />



</navigation>