<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/headerImg"
                android:layout_width="0dp"
                android:layout_height="236dp"
                android:alpha="0.9"
                android:scaleType="centerCrop"
                android:src="@drawable/blueback"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/headerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingTop="32dp"
                android:text="@string/event_shortname"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/headerImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/headerImg"
                app:layout_constraintVertical_bias="0.19" />

            <TextView
                android:id="@+id/headerSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/event_name"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/headerImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerTitle"
                app:layout_constraintVertical_bias="0.12" />

            <TextView
                android:id="@+id/subText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/event_desc"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerImg" />

            <Button
                android:id="@+id/locationBtn"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="11dp"
                android:text="@string/btn4"
                app:layout_constraintEnd_toStartOf="@+id/attendeesBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subText" />

            <Button
                android:id="@+id/attendeesBtn"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="30dp"
                android:text="@string/btn1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/locationBtn"
                app:layout_constraintTop_toBottomOf="@+id/subText" />

            <Button
                android:id="@+id/partnersBtn"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/btn2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/speakersBtn"
                app:layout_constraintTop_toBottomOf="@+id/attendeesBtn" />

            <Button
                android:id="@+id/speakersBtn"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/btn3"
                app:layout_constraintEnd_toStartOf="@+id/partnersBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationBtn" />

            <TextView
                android:id="@+id/tvAgenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_schedule"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/rvHomeSessions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/partnersBtn" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHomeSessions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="85dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/partnersBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>