<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.location.LocationFragment">

    <TextView
        android:id="@+id/speakersHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/venue_bic"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_marginTop="60dp"
        android:background="@color/blue_200"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"></LinearLayout>

    <TextView
        android:id="@+id/buildingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/streetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildingText"
        app:layout_constraintVertical_bias="0.02" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="300dp"
        android:layout_height="335dp"
        android:contentDescription="@string/venue_bic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/streetText"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/mapsBtn"
        android:layout_width="196dp"
        android:layout_height="76dp"
        android:text="@string/go_to_maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="0.29" />
</androidx.constraintlayout.widget.ConstraintLayout>